main/nginx/deploy.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: my-webapp
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: my-webapp
    template:
      metadata:
        labels:
          app: my-webapp
      spec:
        containers:
        - name: my-webapp
          image: nginx:1.7.9
          ports:
          - containerPort: 80
