main/nginx/svc.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: my-webapp-service
  spec:
    selector:
      app: my-webapp
    type: ClusterIP  
    ports:
      - port: 80
        targetPort: 80
